started doing questions ui

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ flutter:
     - assets/images/ui/shop_interface.png
     - assets/images/ui/teacher_sil.png
     - assets/images/ui/close_icon.png
+    - assets/images/ui/a.png
+    - assets/images/ui/b.png
+    - assets/images/ui/c.png
+    - assets/images/ui/choose_questions.png
     - assets/images/items/visit_ticket.png
     - assets/images/teachers/dam/carles.png
     - assets/images/teachers/dam/carles2.png
