added a,b,c renders, working on fixing shop interface onTapDown() to make it unique for each click on each item

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ flutter:
 
   uses-material-design: true
   assets:
+    - assets/text/api_titxers.txt
     - assets/images/bg/dambg.png
     - assets/images/ui/ecaib_coin.png
     - assets/images/ui/gold_coin.png
